# bevy_texture_loader

./: Cargo.toml
assets/: circles.texture  dot.texture  multi.animation  single.animation
examples/: animation_finished.rs  animation_multi.rs  animation_single.rs  atlas.rs  image.rs
src/: lib.rs  texture_loader_plugin.rs  texture_loader_schedule.rs
src/assets/: animation.rs  mod.rs  texture.rs
src/assets/serialized/: animation_serialized.rs  mod.rs  texture_serialized.rs
src/bundles/: animation_bundle.rs  mod.rs  texture_bundle.rs
src/components/: animation_data.rs  mod.rs
src/events/: animation_finished_event.rs  mod.rs
src/loaders/: animation_loader.rs  mod.rs  texture_loader.rs
src/systems/: convert_texture_to_sprite.rs  handle_animations.rs  mod.rs
